[gd_scene load_steps=15 format=3 uid="uid://p3s68i61bkhv"]

[ext_resource type="Script" uid="uid://d24dtcl1r85mw" path="res://scenes/enemies/scripts/spider/call_method_beam.gd" id="1_6vt27"]
[ext_resource type="Texture2D" uid="uid://dlxmfqdt4v3ki" path="res://assets/enemies/egg turret/Shoot/new_laser.png" id="2_swoc6"]
[ext_resource type="Script" uid="uid://cdlmhtv5e4opp" path="res://scenes/enemies/scripts/spider/spider_beam2_keep.gd" id="3_6vt27"]
[ext_resource type="Material" uid="uid://p7x1je6dtmo4" path="res://Shaders/.tres files/plasm_wave2.tres" id="4_125yl"]
[ext_resource type="Texture2D" uid="uid://dgh4jqo6ps7nw" path="res://assets/enemies/spider/laser_beam2.png" id="5_qspto"]
[ext_resource type="Script" uid="uid://8pgcd4fjmfie" path="res://scenes/enemies/scripts/spider/line_2d_beam.gd" id="6_iy3bl"]

[sub_resource type="Animation" id="Animation_sxd6g"]
length = 5.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}

[sub_resource type="Animation" id="Animation_11bfb"]
resource_name = "laser_beam"
length = 4.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 3.9, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1.8), Vector2(-1000, 1.8), Vector2(-1000, 1.8), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ylnva"]
_data = {
&"RESET": SubResource("Animation_sxd6g"),
&"laser_beam": SubResource("Animation_11bfb")
}

[sub_resource type="Animation" id="Animation_ylnva"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/squash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.258]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/LIGHTNING_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.26]
}

[sub_resource type="Animation" id="Animation_2ycer"]
resource_name = "new_animation"
length = 0.1
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.92, 0.5), Vector2(0.92, 1.3), Vector2(0.92, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/squash")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.518, 3.0, -0.561]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material:shader_parameter/LIGHTNING_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e0kjr"]
_data = {
&"RESET": SubResource("Animation_ylnva"),
&"new_animation": SubResource("Animation_2ycer")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfc4r"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rspc8"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 20.0
flatness = 1.0
initial_velocity_min = 700.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0

[node name="spider_beam2" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1_6vt27")

[node name="scale_x_axis_pivot" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ylnva")
}
autoplay = "laser_beam"

[node name="scale_y_axis" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Sprite2D/Line2D")
libraries = {
&"": SubResource("AnimationLibrary_e0kjr")
}
autoplay = "new_animation"

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(1e-05, 1)
skew = -0.52534413
texture = ExtResource("2_swoc6")
offset = Vector2(17.65, 0.93)

[node name="ShapeCast2D" type="ShapeCast2D" parent="Sprite2D"]
unique_name_in_owner = true
position = Vector2(4.01389, 0)
scale = Vector2(0.4, 0.49)
shape = SubResource("RectangleShape2D_dfc4r")
target_position = Vector2(0, 0)
collision_mask = 5
script = ExtResource("3_6vt27")

[node name="Line2D" type="Line2D" parent="Sprite2D"]
unique_name_in_owner = true
material = ExtResource("4_125yl")
points = PackedVector2Array(0, 0, 8.75, 0)
texture = ExtResource("5_qspto")
texture_mode = 2
script = ExtResource("6_iy3bl")
collider_name = "furthest_collider"

[node name="beam_particles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(-1, 1)
amount = 100
lifetime = 0.2
explosiveness = 0.1
process_material = SubResource("ParticleProcessMaterial_rspc8")
